# XR1ControllerOL

./: .project  .rosinstall  .~lock.RobotIDList.ods#  1.teach  Barcelona.mute  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Fries.xr1para  MoCapReadme.odt  Msg&SrvReadme.ods  README.md  RobotIDList.ods  TeachModeReadme.odt  Ultimate2Master.odt  cmake2.sh  cmake_install.cmake  coconut_para.txt  control_model.ods  cream.xr1para  daikon_para.xr1para  debug_acc  debug_cur  debug_pos  debug_tar_acc  debug_tar_cur  debug_tar_pos  debug_tar_vel  debug_vel  fudge.xr1para  fungus.xr1para  local_setup.sh  package.xml  setup.sh  strawberry.xr1para  switch2X86.bash  swtich2TX2.bash  teach (another copy).teach  teach.teach  teach_test.teach  (+10 more)
ALP/: 1.data  1.mute  1.teach  10.data  100.data  101.data  102.data  104.data  105.data  107.data  108.data  109.data  11.data  110.data  111.data  112.data  113.data  114.data  115.data  116.data  117.data  118.data  119.data  12.data  120.data  121.data  122.data  123.data  124.data  125.data  126.data  127.data  128.data  129.data  13.data  130.data  131.data  132.data  133.data  136.data  (+141 more)
ActuatorController_SDK/include/: actuatorcontroller.h  communicateunit.h  communication.h  gingeraddition.h  gingeraddition_add.h  mediator.h
ActuatorController_SDK/serialPort_Ethernet2CAN_sdk_v3.0.0/sdk/include/: actuatorcontroller.h  actuatordata.h  actuatordefine.h  communicateunit.h  gingeraddition.h  idata.h  innfosproxy.h  itimer.h  mediator.h
BLC/: bwd.data  fwd.data  lwd.data  rotl.data  rotr.data  rwd.data
atomic_configure/: local_setup.sh  setup.sh
catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  setup_cached.sh
catkin_generated/installspace/: xr1controllerol.pc  xr1controllerolConfig.cmake
catkin_generated/stamps/xr1controllerol/: package.xml.stamp
devel/: .rosinstall
devel/lib/pkgconfig/: xr1controllerol.pc
devel/share/xr1controllerol/cmake/: xr1controllerol-msg-paths.cmake  xr1controllerolConfig.cmake
dlib/dlib/: CMakeLists.txt
gtest/: CTestTestfile.cmake  cmake_install.cmake
gtest/gtest/: CTestTestfile.cmake
include/: xr1define.h
include/rqt_interface/: my_plugin.h
include/xr1controllerol/: infoPrinter.h  xr1controllerol.h  xr1controllerolmsgulit.h  xr1sensors.h
launch/: actuator_bridge.launch
lib/pkgconfig/: xr1controllerol.pc
msg/: AnimationMsgs.msg  IKLinearTarget.msg
share/xr1controllerol/cmake/: xr1controllerolConfig.cmake
src/: IK_odom.cpp  actuator_bridge.cpp  mute_test.cpp  taught_test.cpp  teach_mode.cpp  tilt_test.cpp  xr1controllerALP_simulator.cpp  xr1controllerIK_simulator.cpp  xr1controllerIK_varify.cpp  xr1controllerOL_simulator.cpp  xr1controllerodom_simulator.cpp
src/Legacy/: IK_Bench.cpp  IK_Example.cpp  mute_test.cpp  xr1controllerALP_simulator.cpp  xr1controllerIK_varify.cpp  xr1controllerodom_simulator.cpp
src/rqt_interface/: my_plugin.ui
src/xr1controllerol/: .xr1controllerolanimation.cpp.swp  infoPrinter.cpp  xr1controllerol.cpp  xr1controllerolactuator.cpp  xr1controllerolanimation.cpp  xr1controllerolhigh.cpp  xr1controllerolhopps.cpp  xr1controllerolik.cpp  xr1controllerollegacy.cpp  xr1controllerollow.cpp  xr1controllerolmodes.cpp  xr1controllerolmsgulit.cpp  xr1controllerolomni.cpp  xr1controllerolsensor.cpp  xr1controlleroltilt.cpp  xr1controllerolulit.cpp
srv/: AnimationOverwrite.srv  AnimationQuery.srv  BalanceQuery.srv  HandGripQuery.srv  IKLinearService.srv  IKPlannerService.srv  IKTrackingService.srv  JointCommands.srv  RobotStateQuery.srv  askReadiness.srv
xr1controller-build/: CMakeCache.txt  Makefile  XR1Controller.cbp  cmake_install.cmake  xr1controller.h
xr1controlleralp-build/: xr1controlleralp.h
xr1controllerpm-build/: CMakeCache.txt  IKplanner.h  IKsolver.cpp  IKsolver.h  Makefile  XR1ControllerPM.cbp  chaincontroller.h  cmake_install.cmake  dynamicmethod.h  genericcontroller.h  handcontroller.h  omnicontroller.h  xr1controllerpm.h  xr1controllerutil.h  xr1define.h
xr1controllers-build/: IKplanner.h  IKsolver.h  RSignal.hpp  XR1IMUmethods.h  backcontroller.h  chaincontroller.h  copy_headers.sh  crosstimer.h  dynamicmethod.h  genericcontroller.h  handcontroller.h  headcontroller.h  omnicontroller.h  wrappedarmiksolver.h  xr1alpdefine.h  xr1controller.h  xr1controlleralp.h  xr1controllerblc.h  xr1controllercommon.h  xr1controllerpm.h  xr1controllerstates.h  xr1controllerutil.h  xr1define.h
xr1controllers-build/Copy Scripts/: copy_headers.sh
xr1imu-build/: XR1IMUmethods.h  xr1IMUdefine.h
xr1paras/: CrimsonCurrant (effort).xr1para  CrimsonCurrant(current).xr1para  CrimsonCurrant.xr1para  EmeraldEndive.xr1para
